--- a/web/template/pages/index.html
+++ b/web/template/pages/index.html
@@ -90,7 +90,7 @@
                         </a>
 
                                 <ul class="dropdown-menu dropdown-user">
-                                    <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                                    <li><a href="../../logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                                     </li>
                                 </ul>
                                 <!-- /.dropdown-user -->
